package com.example.quadwrangle.game_view.ui.home;

public interface IClickable {
    void onItemClick(int position);
}
